fix whitespace

--- a/app/assets/stylesheets/bootstrap_and_override.css.less
+++ b/app/assets/stylesheets/bootstrap_and_override.css.less
@@ -61,5 +61,27 @@ body { padding-top: 60px; }
 }
 
 
-.visible {
+
+
+#redactions_form{
+    float: left;
+    margin-right: 20px;
 }
+
+#redactions_output {
+    float: right;
+    width: 600px;
+}
+
+#redactions_output p {
+    font-family: courier;
+}
+
+.debug_dump { 
+    clear: both;
+}
+
+.visible {
+    background-color: white;
+}
+
